--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'eclipse'
 }
 
 repositories {
@@ -36,4 +37,16 @@ tasks.withType(JavaCompile) {
 
     // 자바 클래스를 실행시킬 JVM의 최소 버전
     targetCompatibility = '17'
+}
+
+// eclipse 프로젝트 이름을 설정하기
+eclipse {
+    project {
+        name = "myapp"
+    }
+    jdt { 
+      sourceCompatibility = 17 // 자바 17이하 버전에서 작성된 코드면 ok
+      targetCompatibility = 17 // 이 프로젝트를 실행할 컴퓨터에는 자바 17버전 이상 이여야 한다는 의미
+      javaRuntimeName = "JavaSE-17"
+    }
 }
