--- a/myapp/app-common/build.gradle
+++ b/myapp/app-common/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'application'
+    id 'java-library'
     id 'eclipse'
 }
 
@@ -8,9 +8,6 @@ repositories {
 }
 
 dependencies {
-    // 서브 프로젝트의 클래스를 사용하기
-    implementation project(':app-common')
-
     // Google JSON 라이브러리
     implementation 'com.google.code.gson:gson:2.10.1'
     
@@ -24,10 +21,6 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
     }
-}
-
-application {
-    mainClass = 'bitcamp.myapp.ServerApp'
 }
 
 tasks.named('test') {
@@ -50,7 +43,7 @@ tasks.withType(JavaCompile) {
 // eclipse 프로젝트 이름을 설정하기
 eclipse {
     project {
-        name = "myapp-server"
+        name = "myapp-common"
     }
     jdt {
       sourceCompatibility = 17
